infra/src/envs/prod/manifests/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: career-roadmap-app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: prod-career-roadmap-app-alb
    alb.ingress.kubernetes.io/subnets: prod-career-roadmap-app-alb-public-subnet-1,prod-career-roadmap-app-alb-public-subnet-2,prod-career-roadmap-app-alb-public-subnet-3
    alb.ingress.kubernetes.io/tags: Environment=prod,Project=career-roadmap-app
spec:
  ingressClassName: prod-api-ingress-class
